--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web"
   ],
   "bin": "./sn-project",
-  "main": "./app",
+  "main": "./index.js",
   "scripts": {
     "test": "make test"
   },
@@ -27,7 +27,6 @@
     "express": "3.x",
     "commander": "*",
     "net": "*",
-    "table-parser": "*",
     "colors": "*",
     "node-firebird": "*",
     "validator": "*",
@@ -36,16 +35,5 @@
   },
   "engines": {
     "node": "0.8.x"
-  },
-  "devDependencies": {
-    "net": "~1.0.0",
-    "colors": "~0.6.0-1",
-    "table-parser": "0.0.3",
-    "validator": "~0.4.25",
-    "node-firebird": "~0.1.1",
-    "commander": "~1.1.1",
-    "jade": "~0.28.2",
-    "express": "~3.1.0",
-    "ejs": "~0.8.3"
   }
 }
