--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sn-project",
-  "preferGlobal": false,
+  "preferGlobal": true,
   "description": "standart-n project",
   "version": "0.0.5",
   "author": "aleksnick <aleksnick01@list.ru>",
@@ -21,7 +21,7 @@
   "bin": "./sn-project",
   "main": "./index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make start"
   },
   "dependencies": {
     "express": "3.x",
